--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="row justify-content-end albert-quote-div">
           <div class="col-lg-5 col-md-7 col-sm-10">
             <hr class="left-align">
-            <h2 class="h2-max-height-7 overflow-hidden">"Insanindade é continuar fazendo sempre a mesma coisa e esperar resultados diferentes"</h2>
+            <h2 class="h2-max-height-7 overflow-hidden">"Insanidade é continuar fazendo sempre a mesma coisa e esperar resultados diferentes"</h2>
             <p class="yellow-text p-max-height-1 overflow-hidden">Albert Einstein</p>
           </div>
         </div>
@@ -101,7 +101,7 @@
             <hr class="left-align">
             <h2 class="yellow-text h2-max-height-2 overflow-hidden">Quem deve participar?</h2>
             <p class="p-max-height-1 overflow-hidden"> <strong>Todo mundo!</strong> </p>
-            <p class="p-max-height-2 overflow-hidden">Se você é <span class="yellow-text">Executivo</span>, aqui você tera insights levar dentro da sua empresa e escalá-la.</p>
+            <p class="p-max-height-2 overflow-hidden">Se você é <span class="yellow-text">Executivo</span>, aqui você terá insights levar dentro da sua empresa e escalá-la.</p>
             <p class="p-max-height-3 overflow-hidden">Se você é <span class="yellow-text">Empreendedor</span>, aprenderá com os erros e acertos de cada um dos talks. Ensinamentos que faculdade nenhuma ensina, apenas pessoas que viveram e erraram bastante podem compartilhar esses ensinamentos.</p>
             <p class="p-max-height-4 overflow-hidden">Se você é <span class="yellow-text">Investidor</span>, além do networking que o próprio evento irá proporcionar, você aprenderá com as histórias dos palestrantes os mercados que estão em ascensão nessa Nova Economia e como você pode se aproximar dessas empresas inovadoras.</p>
           </div>
@@ -123,7 +123,7 @@
         <div class="w-100"></div>
         <div class="col-md-7 my-2">
             <h4 class="yellow-text">Networking: a lição mais importante</h4>
-            <p>Você estará reunido com profissionais do país inteiro. Todos em busca de um único objetivo: buscar novas maneiras e ensinamentos de inovar seu negócio e reiventar suas empresas. É a chance de trocar reconhecimentos com pessoas tão interessadas quanto você e é daí que as grandes ideias surgem. Por isso lá é permitido você fazer pitch do seu negócio, trocar cartões, atualizar seu Linkedin... saia de lá com novos amigos e parceiros de negócios. Todos sairão ganhando com isso!</p>
+            <p>Você estará reunido com profissionais do país inteiro. Todos em busca de um único objetivo: buscar novas maneiras e ensinamentos de inovar seu negócio e reinventar suas empresas. É a chance de trocar reconhecimentos com pessoas tão interessadas quanto você e é daí que as grandes ideias surgem. Por isso lá é permitido você fazer pitch do seu negócio, trocar cartões, atualizar seu Linkedin... saia de lá com novos amigos e parceiros de negócios. Todos sairão ganhando com isso!</p>
         </div>
       </div>
     </div>
@@ -379,7 +379,7 @@
 
         <div class="row justify-content-center">
           <div class="col-4">
-            <p class="footer-p-2">San Fransisco, EUA / São Paulo, Brasil / Shanghai, China</p>
+            <p class="footer-p-2">San Francisco, EUA / São Paulo, Brasil / Shanghai, China</p>
           </div>
           <div class="col-6">
             <p class="footer-p-2 text-right">STARTSE INFORMACOES E SISTEMAS LTDA - ME / CNPJ 24.554.736/0001-70 - Copyright © StartSe 2014-2019</p>
